--- a/index.html
+++ b/index.html
@@ -7,6 +7,101 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="inter-font">
-  
+  <header class="navbar">
+
+    <div class="logo">
+      <img src="assets/logo.png" alt="">
+    </div>
+    <nav class="nav-links">
+      <a href="#" id="nav-hide">Home</a>
+      <a href="#" id="nav-hide">Shop</a>
+      <a href="#" id="nav-hide">About us</a>
+      <a href="#" class="cart">Cart ($56)</a>
+    </nav>
+  </header>
+  <main>
+
+    <section class="hero">
+      <div class="hero-text">
+        <h1 class="noto-serif-font">ALWAYS <span class="color4">FRESH <br> FLOWERS</span></h1>
+        <p class="color3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+      </div>
+      <div class="hero-img">
+        <img src="assets/hero-flower.png" alt="" />
+      </div>
+  </section>
+
+  <section class="our-plants">
+    <h2 class="noto-serif-font"><span class="color4">Our</span> Plants</h2>
+    <p class="color3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+    <div class="product-grid">
+
+      <div class="product-card">
+
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button class="btn-primary">ADD TO CART</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3>Lily Blossom</h3>
+        <p>20 USD</p>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+  </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
