added subcribe section and try to responsive it

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
       </div>
     </div>
   </section>
+  
+  <section class="subscribe-section">
+    <h2>Join the colorful Bunch</h2>
+    <div class="subscribe-box">
+      <input type="email" placeholder="Write email" />
+      <button type="submit">Subscribe</button>
+    </div>
+  </section>
+
   </main>
   <footer>
 
