added flower plant section and responsive it

--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
     </div>
   </section>
   
+  <section class="flower">
+    <div>
+      <img class="badge" src="assets/trusted-badge.png" alt="">
+      <img src="assets/flower-store.png" alt="">
+    </div>
+    <div class="flower-title">
+      <h3 class="noto-serif-font">Flower & Plants Lover</h3>
+      <ul class="color3">
+        <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+        <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+        <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+      </ul>
+    </div>
+  </section>
+
   <section class="subscribe-section">
     <h2>Join the colorful Bunch</h2>
     <div class="subscribe-box">
