added footer and make it responsive

--- a/index.html
+++ b/index.html
@@ -124,8 +124,41 @@
   </section>
 
   </main>
-  <footer>
-
+  <footer class="footer">
+    <div class="footer-left">
+      <img src="assets/logo.png" alt="">
+      <p class="color3">Indulge your senses with the <br> beauty and fragrance of our fresh flower shop.</p>
+    </div>
+    <div class="footer-links">
+      <div class="color5">
+        <h4>Home</h4>
+        <h4>About Us</h4>
+        <h4>Blog</h4>
+        <h4>FAQ</h4>
+        <h4>Contact Us</h4>
+      </div>
+      <div class="color5">
+        <h4>Features</h4>
+        <h4>Pricing</h4>
+        <h4>Privacy Policy</h4>
+        <h4>Terms of Service</h4>
+        <h4>Help Center</h4>
+      </div>
+    </div>
+    <div class="social-icons">
+      <div>
+        <a href="#"> <img src="assets/icon-linkedin.png" alt=""></a>
+      </div>
+      <div>
+        <a href="#"><img src="assets/icon-twitter.png" alt=""></a>
+      </div>
+      <div>
+        <a href="#"><img src="assets/icon-facebook.png" alt=""></a>
+      </div>
+      <div>
+        <a href="#"><img src="assets/icon-youtube.png" alt=""></a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
