added deals sectioin and responsive

--- a/index.html
+++ b/index.html
@@ -115,6 +115,42 @@
     </div>
   </section>
 
+  <section class="deals">
+    <div class="deals-text">
+      <h2 class="noto-serif-font"><span class="color4">Latest</span>  Deals</h2>
+    <p class="color3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+    </div>
+    <section class="latest-deals">
+    <div class="left-deals">
+      <div class="image-container">
+      <img src="assets/deal-bloom.png" alt="">
+      <div class="text-overlay">
+        <h3>60% Off | Bloom Plant</h3>
+        <a href="" id="left-deals-a-style">Shop Now</a>
+      </div>
+    </div>
+    <div class="image-container">
+      <img src="assets/deal-ana.png" alt="">
+      <div class="text-overlay">
+        <h3>30% Off | Ana  Plant</h3>
+        <a href="" id="left-deals-a-style">Shop Now</a>
+      </div>
+    </div>
+    </div>
+
+    <div class="right-deals">
+      <div class="image-container">
+        <img src="assets/deal-zabo.png" alt="" />
+        <div class="text-overlay">
+        <h2 class="noto-serif-font">25% Off | Zabo Plant</h2>
+        <a href="#">Shop Now</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  </section>
+
+
   <section class="subscribe-section">
     <h2>Join the colorful Bunch</h2>
     <div class="subscribe-box">
