modify some section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     <div class="product-grid">
 
       <div class="product-card">
-
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
@@ -47,55 +46,43 @@
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
       <div class="product-card">
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
       <div class="product-card">
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
       <div class="product-card">
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
       <div class="product-card">
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
       <div class="product-card">
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
       <div class="product-card">
         <img src="assets/sample-flower-image.png" alt="">
         <h3>Lily Blossom</h3>
         <p>20 USD</p>
-        <button>Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="assets/sample-flower-image.png" alt="">
-        <h3>Lily Blossom</h3>
-        <p>20 USD</p>
-        <button>Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="assets/sample-flower-image.png" alt="">
-        <h3>Lily Blossom</h3>
-        <p>20 USD</p>
-        <button>Add to Cart</button>
+        <button class="btn-primary">ADD TO CART</button>
       </div>
     </div>
   </section>
